--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "wifiwizard",
+  "name": "com.danishin.wifiwizard",
   "version": "0.2.11",
   "description": "This plugin allows Phonegap applications to manage Wifi connections.",
   "cordova": {
-    "id": "com.pylonproducts.wifiwizard",
+    "id": "com.danishin.wifiwizard",
     "platforms": [
       "android",
       "ios"
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/parsonsmatt/wifiwizard.git"
+    "url": "git+https://github.com/danishin/WifiWizard.git"
   },
   "keywords": [
     "phonegap",
@@ -24,7 +24,7 @@
   "author": "Matt Parsons",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/parsonsmatt/wifiwizard/issues"
+    "url": "https://github.com/danishin/wifiwizard/issues"
   },
-  "homepage": "https://github.com/parsonsmatt/wifiwizard#readme"
+  "homepage": "https://github.com/danishin/wifiwizard#readme"
 }
