--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.danishin.wifiwizard",
-  "version": "0.2.11",
+  "version": "1.0.0",
   "description": "This plugin allows Phonegap applications to manage Wifi connections.",
   "cordova": {
     "id": "com.danishin.wifiwizard",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danishin/WifiWizard.git"
+    "url": "git+https://github.com/danishin/wifiwizard.git"
   },
   "keywords": [
     "phonegap",
@@ -21,7 +21,7 @@
     "cordova-android",
     "cordova-ios"
   ],
-  "author": "Matt Parsons",
+  "author": "Daniel Shin",
   "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/danishin/wifiwizard/issues"
