--- a/plugin.xml
+++ b/plugin.xml
@@ -6,7 +6,7 @@
 				version="0.2.11">
 	
 	<name>WifiWizard</name>
-	<description>This plugin allows Phonegap applications to manage Wifi connections.</description>
+	<description>Cordova plugin for managing wifi connections</description>
 	<author>Matt Parsons</author>
 	<keywords>phonegap,network,wifi</keywords>
 	<license>Apache 2.0</license>
